<resources>
    <string name="app_name">Movies Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_name">Movie name</string>
    <string name="release_year">Release Year</string>
    <string name="duration_min">Duration (min)</string>
    <string name="publisher_studio">Publisher/Studio</string>
    <string name="watched">Watched</string>
    <string name="save">Save</string>
    <string name="add_movie">Add movie</string>
    <string name="delete_movie">Delete movie</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="movie_list">Movie List</string>
    <string name="movie_details">Movie details</string>
    <string name="rating_0_10">Rating 0-10</string>
    <string name="movie_name_cannot_be_empty">Movie name cannot be empty</string>
    <string name="release_year_cannot_be_empty">Release Year cannot be empty</string>
    <string name="watch_the_movie_to_rate_it">Watch the movie to rate it</string>
    <string name="rate_the_movie_from_0_to_10">Rate the movie from 0 to 10</string>
    <string name="order_by_name">Order by name</string>
    <string name="order_by_rating">Order by rating</string>
</resources>