<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:padding="12dp"
                android:hint="@string/movie_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/yearEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:padding="12dp"
                android:hint="@string/release_year"
                android:inputType="number" />

            <EditText
                android:id="@+id/durationEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:padding="12dp"
                android:hint="@string/duration_min"
                android:inputType="number" />

            <EditText
                android:id="@+id/studioEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:padding="12dp"
                android:hint="@string/publisher_studio"
                android:inputType="text" />

            <Spinner
                android:id="@+id/genreSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:padding="12dp"
                android:entries="@array/genres_array" />

            <EditText
                android:id="@+id/ratingEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:padding="12dp"
                android:hint="@string/rating_0_10"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/watchedCb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="12dp"
                android:text="@string/watched" />

            <Button
                android:id="@+id/saveBt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>